2008-02-05 18:41:22  Tim Janik  <timj@imendio.com>

	* Makefile.am: integrate tests/.

	* tests/: new directory for libgobject tests.

	* tests/Makefile.am: build and run threadtests.

	* tests/threadtests.c: test multi-threaded initializers for
	object classes and interfaces.

2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.4 ===

2008-01-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

2008-01-14  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

008-01-07  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2007-12-26  Behdad Esfahbod  <behdad@gnome.org>

	* gclosure.h (G_CCLOSURE_SWAP_DATA): Fix macro argument.
	(#505674, Areg Beketovski)

2007-12-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.0 ===

2007-11-11  Mathias Hasselmann  <mathias@openismus.com>

	Always exit with non-zero error code when printing warnings.

	* gobject/glib-genmarshal.c: Add global exit_status variable, and use
	it in pad() and process_signature() to return with non-zero error code
	when printing warnings. (#495294)

2007-11-08  Matthias Clasen <mclasen@redhat.com>

	* glib-mkenums.in: Don't shift ARGV[0] to undefined. 
	(#466557, Aidan Delaney)

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.14.3 ===

2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.2 ===

2007-09-20  Carlos Garnacho  <carlos@imendio.com>

	* gtypemodule.h: make sure we define GType g_define_type_id in
	G_G_DEFINE_DYNAMIC_TYPE_EXTENDED so it works together with
	G_IMPLEMENT_INTERFACE. (#478459)

2007-09-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.1 ===

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.0 ===

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.7 ===

Tue Jul 10 12:31:50 2007  Tim Janik  <timj@imendio.com>

	* gtype.h: use g_once_init_enter/g_once_init_leave to guard critical